# leo-assignment-clean

./: CMakeLists.txt  README.md  package.xml
config/: kml_config.yaml  pcd_config.yaml
data/: capture0002.pcd  test_route.kml
launch/: kml_parser.launch.py  leo.launch.py  pc_register.launch.py
src/: kml_parser.cpp  point_cloud_registration.cpp
